--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Generic Journey Builder Activity",
+  "name": "Generic-Activity",
   "version": "0.1.0",
   "private": true,
   "scripts": {
